@@ -17,5 +17,11 @@ bootJar {
 	version = '0.1.0'
 }
 
+bootRun { 
+	main = "io.joalder.hotdog.customer.CustomerApplication"
+    jvmArgs = ['--module-path=' + classpath.asPath, '--add-modules=io.joalder.hotdog.customer', '--add-opens=java.base/java.lang=spring.core']
+    classpath = files()
+}
+
 compileJava.dependsOn(":evil-hot-dog-stand:build")
 compileJava.dependsOn(":best-hot-dog-stand-in-town:build")
